Kubernetes/IdentityService.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-task-6-identity-service
spec:
  type: NodePort
  selector:
    app: home-task-6-identity
  ports:
    - targetPort: 8080
      port: 80
