Kubernetes/ProfileService.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-task-6-profile-service
spec:
  type: NodePort
  selector:
    app: home-task-6-profile
  ports:
    - targetPort: 8080
      port: 80
