Kubernetes/IdentityIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-task-6-identity-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: home-task-6-identity-service
                port:
                  number: 80
